Update tutorial. Minor revision of QHA code

--- a/tutorial/thermo_file_readwrite.ipynb
+++ b/tutorial/thermo_file_readwrite.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Basic I/O of DFPT\n",
-    "The density functional perturbation theory (DFPT) specific methods and attributes are available in 'file_readwrite.py' since version 2022.x.x.\n",
+    "The density functional perturbation theory (DFPT) specific methods and attributes are available in 'file_readwrite.py' since July 2022.\n",
     "\n",
-    "**Modifications are made at the end of Crystal_output class. Line 741~991. Documentations and source codes are attached at the bottom of this page.**"
+    "**Classes used in this tutorial are defined in 'crystal_functions.file_readwrite'. Documentations and source codes are attached at the bottom of this page.**"
    ]
   },
   {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd203f8",
+   "id": "001b5d58-2e3c-4e45-85f1-1c486e5cf911",
    "metadata": {},
    "source": [
     "## Class Crystal_output\n",
@@ -281,59 +281,19 @@
     "Class Crystal_output can be used to extract the harmonic frequency calculation data from the output.\n",
     "\n",
     "### Methods\n",
-    "**check_freq_file()**  \n",
+    "#### `self.check_freq_file()`  \n",
     "  \n",
     "Check whether an output file is specified and whether it is a frequency calculation file. Not a standalone method. The identifier used: \n",
     "```\n",
     "+++ SYMMETRY ADAPTION OF VIBRATIONAL MODES +++\n",
     "```\n",
-    "\n",
-    "**get_qpoint()**  \n",
-    "  \n",
-    "Get DFT total energy of the system and the list of q points where the vibrational frequency is calculated. Dispersion output (multiple q points) is supported. \n",
-    "\n",
-    "To avoid ambigious definition, the search for DFT total energy is integrated into this method. To consider possible empirical corrections, the total energy reported at the central point when taking the numerical secondary derivatives is used, instead of the converged value at the final step of SCF. Unit: KJ/mol cell\n",
-    "\n",
-    "**get_mode()**  \n",
-    "  \n",
-    "Get frequencies of all modes at all the q points sampled. Unit: THz.\n",
-    "\n",
-    "**get_eigenvector()**  \n",
-    "  \n",
-    "Get the eigenvectors of all normal modes. Eigenvectors are normalised to classical amplitudes. Unit: Angstrom\n",
-    "\n",
-    "**clean_imaginary()**  \n",
-    "  \n",
-    "Substitute the negative frequencies with numpy NaN values and keep the original shape of numpy arrays. Not a standalone method. Used after get_mode(). The threshold of a negative frequency is -0.0001 THz.\n",
-    "\n",
-    "### Attributes\n",
-    "\n",
-    "* **self.edft**, get_qpoint, ncalc * 1 array, DFT total energy of simulation cell. Unit: KJ / mol cell. \n",
-    "\n",
-    "Note: For harmonic calculations at $\\Gamma$ and dispersion calculations, the length of `self.edft` is 1 * 1 since only 1 central calculation is performed. For QHA calculations, its length is nSampling point * 1 list.\n",
-    "\n",
-    "* **self.nqpoint**, get_qpoint, int, number of q point where the frequencies are calculated.  \n",
-    "  \n",
-    "* **self.qpoint**, get_qpoint, nqpoint * 3 numpy array, the fractional coordinates of q points in reciprocal lattice.  \n",
-    "  \n",
-    "* **self.nmode**, get_mode, nqpoint * 1 numpy array, the numbers of modes at each q point.  \n",
-    "  \n",
-    "* **self.frequency**, get_mode and clean_imaginary, nqpoint * nmode numpy array, the vibrational frequencies ($\\nu$) of each mode at each q point. Unit: THz.\n",
-    "\n",
-    "Note: \n",
-    "\n",
-    "Angular frequency: $\\omega = 2\\pi\\nu$  \n",
-    "Eigen value of dynamic matrix: $\\lambda = \\nu^{2}$\n",
-    "\n",
-    "* **self.eigenvector**, get_eigenvector, nqpoint * nmode * natom * 3 numpy array, the eigenvectors of dynamic matrix at each atom, each vibrational mode and each qpoint. Classical amplitude (298.15K), expressed in Cartesian coordinates. Unit: Angstrom.\n",
-    "\n",
-    "The source code (file_readwrite.py Line 741~1016) is attached below:"
+    "No input, no output attribute."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8514470d",
+   "execution_count": null,
+   "id": "ec7564ad-228b-487a-9a9b-b01df9e28fcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,8 +337,35 @@
     "            else:\n",
     "                continue\n",
     "\n",
-    "        return is_freq\n",
+    "        return is_freq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8851d21-1b9b-4bc9-8712-70dba1977b44",
+   "metadata": {},
+   "source": [
+    "#### `self.get_qpoint()`\n",
+    "  \n",
+    "Get DFT total energy of the system and the list of q points where the vibrational frequency is calculated. Dispersion output (multiple q points) is supported. \n",
     "\n",
+    "To avoid ambigious definition, the search for DFT total energy is integrated into this method. To consider possible empirical corrections, the total energy reported at the central point when taking the numerical secondary derivatives is used, instead of the converged value at the final step of SCF.\n",
+    "\n",
+    "No input.\n",
+    "\n",
+    "Output attributes:\n",
+    "- `self.edft` DFT total energy. Unit: KJ / mol cell. Note: For harmonic calculations at $\\Gamma$ and dispersion calculations, the length of `self.edft` is 1 * 1 since only 1 central calculation is performed. For QHA calculations, its length is nSampling point * 1 list.\n",
+    "- `self.nqpoint` Number of q points where the frequencies are calculated.\n",
+    "- `self.qpoint` Fractional coordinates of qpoints in the first Brillouin zone."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7b1b22b-7f74-4fc0-9726-a6e012eb520d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    def get_qpoint(self):\n",
     "        \"\"\"\n",
     "        Get the lattice information, DFT total energy and qpoints at which the\n",
@@ -444,8 +431,36 @@
     "            print('ERROR: Only support: 1. HA, Gamma point 2. QHA, gamma point 3. HA dispersion.')\n",
     "            sys.exit(1)\n",
     "\n",
-    "        return self.edft, self.nqpoint, self.qpoint\n",
+    "        return self.edft, self.nqpoint, self.qpoint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bac4a5bf-7837-43a3-8a45-d2e1d4faae27",
+   "metadata": {},
+   "source": [
+    "#### `self.get_mode()`\n",
+    "Get frequencies of all modes at all the q points sampled and compute the total number of vibration modes (natoms * 3).\n",
     "\n",
+    "No input. \n",
+    "\n",
+    "Output attributes:\n",
+    "- `self.nmode` Number of vibration modes at each qpoint\n",
+    "- `self.frequency` Harmonic vibrational frequency $\\nu$. Unit: THz\n",
+    "\n",
+    "Note: \n",
+    "\n",
+    "Angular frequency: $\\omega = 2\\pi\\nu$  \n",
+    "Eigen value of dynamic matrix: $\\lambda = \\nu^{2}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1f6c01a-ac12-4d66-8229-55060ffe8f03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    def get_mode(self):\n",
     "        \"\"\"\n",
     "        Get corresponding vibrational frequencies and for all modes and\n",
@@ -496,10 +511,30 @@
     "            countline += 1\n",
     "\n",
     "        self.frequency = np.reshape(self.frequency, (self.nqpoint, -1))\n",
-    "        self.nmode = np.array([len(i) for i in self.frequency], dtype=float)\n",
+    "        self.nmode = np.array([len(i) for i in self.frequency], dtype=int)\n",
     "\n",
-    "        return self.nmode, self.frequency\n",
+    "        return self.nmode, self.frequency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86502c5f-12e2-4084-9af9-3cda1d52737e",
+   "metadata": {},
+   "source": [
+    "#### `self.get_eigenvector()`\n",
+    "Get the eigenvectors of all normal modeson all the atoms in the supercell. Eigenvectors are normalised to classical amplitudes. \n",
     "\n",
+    "No input. Output attributes:\n",
+    "- `self.eigenvector` Eigenvectors expressed in Cartesian coordinate, at all atoms, all modes and all qpoints. Classical amplitude(298.15K). Unit: Angstrom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec2728a0-09c3-40a1-ab47-196a9ee778f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    def get_eigenvector(self):\n",
     "        \"\"\"\n",
     "        Get corresponding mode eigenvectors for all modes on all\n",
@@ -577,8 +612,27 @@
     "\n",
     "        self.eigenvector = np.array(self.eigenvector) * 0.529177\n",
     "\n",
-    "        return self.eigenvector\n",
+    "        return self.eigenvector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9df8f037-d61f-429c-a549-8c502faee7fd",
+   "metadata": {},
+   "source": [
+    "#### `clean_imaginary()`\n",
+    "Not a standalone method. Used after get_mode(). Substitute the negative frequencies with numpy NaN values and keep the original shape of numpy arrays. The threshold of a negative frequency is -0.0001 THz.\n",
     "\n",
+    "No input. No output attributes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c54d3b4-d11f-4fda-9d01-93879088a809",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "    def clean_imaginary(self):\n",
     "        \"\"\"\n",
     "        Substitute imaginary modes and corresponding eigenvectors with numpy\n",
@@ -632,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
