--- a/examples/thermo-HA.ipynb
+++ b/examples/thermo-HA.ipynb
@@ -5,41 +5,39 @@
    "id": "2b8b7e97",
    "metadata": {},
    "source": [
-    "# Lattice Dynamics and Density Functional Perturbation Theory\n",
-    "## Harmonic level\n",
-    "### Thermodynamics at $\\Gamma$ point, a given temperature"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a12ee87d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from crystal_functions import thermodynamics\n",
-    "from crystal_functions.thermodynamics import Harmonic\n",
+    "# Lattice Dynamics and Density Functional Perturbation Theory - Harmonic Level\n",
     "\n",
-    "rm_condition = Harmonic().from_file('data/paracetamol_f1_freq.out', \n",
-    "                                    scelphono=[[1, 0, 0],\n",
-    "                                               [0, 1, 0],\n",
-    "                                               [0, 0, 1]],\n",
-    "                                    write_out=False)\n",
-    "E_h, E_g, E_zp, U_vib, S, C_v = rm_condition.thermodynamics(temperature=[298.15],\n",
-    "                                                            pressure=[0.000101])"
+    "The script 'thermodyanmics.py' is a comprehensive module for lattice dynamics based on harmonic and quasi-harmonic level of theory. For simplicity, this tutorial is focused only on harmonic phonons. For quasi-harmonic part, please refer to 'thermodynamics-QHA'."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd2fbf3b",
+   "id": "efd2f171",
    "metadata": {},
    "source": [
-    "Initialization and calculation. Temperature = 298.15K, pressure = 0.000101 GPa (as given at the bottom of 'data/paracetamol_f1_freq.out')"
+    "## Tests\n",
+    "2 tests are performed. One is based on $\\Gamma$ point calculations and the other one is based on phonon dispersion calculations.\n",
+    "\n",
+    "1. Thermodynamic properties at room temperature (298.15K), 0 pressure - For comparison with CRYSTAL17 output.  \n",
+    "2. Thermodynamic properties from 0K to 300K, with the interval of 20K and from 0 GPa to 0.5 GPa with the interval of - To illustrate the structure of output file and key information. \n",
+    "\n",
+    "**N.B.** It is somehow meanless to consider pressure & Gibbs free energy at Harmonic level, since the volume is assumed as constant. $G(T, p)=F(T)+pV$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb53b0a9",
+   "metadata": {},
+   "source": [
+    "### Room temperature (298.15K), 0 pressure thermodyanmics\n",
+    "This part is used for comparison with CRYSTAL17 output file, in order to illustrate the equivalence of methods adopted here and the method of CRYSTAL17. $\\Gamma$ point calculation of Form I paracetamol is used ('freqf1-r0.out' in 'data/'). Reference data with the same environmental conditions can be found in the same file. No output file is generated. \n",
+    "\n",
+    "The 'pressure' specified is the value given in the same output file. For comparison only."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "18a94ee0",
    "metadata": {},
    "outputs": [
@@ -47,11 +45,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DFT total energy (EL) =  -5402457.523570631 kJ/mol\n",
-      "Helmholtz free energy (EL+E0+ET-TS) =  -5400802.066049164  kJ/mol\n",
-      "Gibbs free energy (EL+E0+ET-TS+pV) =  -5400802.020170372  kJ/mol\n",
-      "Zero-point energy (E0) =  1759.1003801887075  kJ/mol\n",
-      "Vibrational contribution to internal energy - E0 (ET) =  107.2036747375173  kJ/mol\n",
+      "DFT total energy (EL) =  -5402457.523570631 KJ/mol\n",
+      "Helmholtz free energy (EL+E0+ET-TS) =  -5400802.066049164  KJ/mol\n",
+      "Gibbs free energy (EL+E0+ET+pV-TS) =  -5400802.066049164  KJ/mol\n",
+      "Zero-point energy (E0) =  1759.1003801887075  KJ/mol\n",
+      "Vibrational contribution to interla energy - E0 (ET) =  107.2036747375173  KJ/mol\n",
       "Entropy*Temperature (TS) =  210846.5334596592  J/mol\n",
       "Heat capacity =  665.5753182283241  J/mol*K\n",
       "Entropy =  707.1827384191153  J/mol*K\n"
@@ -59,12 +57,24 @@
     }
    ],
    "source": [
+    "from crystal_functions import thermodynamics\n",
+    "from crystal_functions.thermodynamics import Harmonic\n",
+    "\n",
+    "rm_condition = Harmonic().from_file('data/freqf1-r0.out', \n",
+    "                                    temperature=[298.15], \n",
+    "                                    pressure=[0.10132500E-3],\n",
+    "                                    scelphono=[[1, 0, 0],\n",
+    "                                               [0, 1, 0],\n",
+    "                                               [0, 0, 1]],\n",
+    "                                    write_out=False)\n",
+    "E_h, E_g, E_zp, U_vib, S, C_v = rm_condition.thermodynamics()\n",
+    "\n",
     "# Note: All attributes are lists.\n",
-    "print('DFT total energy (EL) = ', rm_condition.edft, 'kJ/mol')\n",
-    "print('Helmholtz free energy (EL+E0+ET-TS) = ', E_h[0, 0], ' kJ/mol')\n",
-    "print('Gibbs free energy (EL+E0+ET-TS+pV) = ', E_g[0, 0, 0], ' kJ/mol')\n",
-    "print('Zero-point energy (E0) = ', E_zp[0], ' kJ/mol')\n",
-    "print('Vibrational contribution to internal energy - E0 (ET) = ', U_vib[0, 0] - E_zp[0], ' kJ/mol')\n",
+    "print('DFT total energy (EL) = ', rm_condition.edft, 'KJ/mol')\n",
+    "print('Helmholtz free energy (EL+E0+ET-TS) = ', E_h[0, 0], ' KJ/mol')\n",
+    "print('Gibbs free energy (EL+E0+ET+pV-TS) = ', E_g[0, 0, 0], ' KJ/mol')\n",
+    "print('Zero-point energy (E0) = ', E_zp[0], ' KJ/mol')\n",
+    "print('Vibrational contribution to interla energy - E0 (ET) = ', U_vib[0, 0] - E_zp[0], ' KJ/mol')\n",
     "print('Entropy*Temperature (TS) = ', S[0, 0] * 298.15, ' J/mol')\n",
     "print('Heat capacity = ', C_v[0, 0], ' J/mol*K')\n",
     "print('Entropy = ', S[0, 0], ' J/mol*K')"
@@ -72,22 +82,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ba8674",
+   "id": "86c8c9d4",
    "metadata": {},
    "source": [
-    "Default units of output quantities:\n",
+    "References from 'freqf1-r0.out' (line 11703~11738) are attached below. Here are several findings:\n",
     "\n",
-    "* **KJ per mol simulation cell**: Helmholtz free energy(E_h), Gibbs free energy(E_g), zero-point energy(E_zp), vibrational contribution to internal energy(U_vib)\n",
+    "1. Parameters derived from vibrational frequencies shows good agreement with reference data, with the error at the level of 10^-4 KJ/mol. The choice of physical constants and different unit conversion coefficients might lead to the discrepancy, where the physical constants play a major role (See below).  \n",
+    "2. The difference in DFT total energy lies in different coefficients for unit conversion. In CRYSTAL17 case, 1 Hartree = 2625.5 KJ/mol. In the current case, 1 Hartree = 2625.500256 KJ/mol.  \n",
+    "3. The PV term is neglected at room condition. Helmholtz free energy is the focus of this tutorial since the Harmonic class was initially developed for QHA fittings. To calculate Gibbs free energy at HA level, use this equation: $G(T,p) = F(T) + pV$\n",
     "\n",
-    "* **J per mole simulation cell per K**: Constant volume heat capacity(C_v), entropy(S)\n",
+    "```\n",
+    " *******************************************************************************\n",
     "\n",
-    "Dimension of output quantities:\n",
+    " HARMONIC VIBRATIONAL CONTRIBUTIONS TO THERMODYNAMIC FUNCTIONS AT GIVEN\n",
+    " TEMPERATURE AND PRESSURE:\n",
     "\n",
-    "By default, phonon dispersion is summed up to calculate the thermodyanmics of bulk crystals, in which case nqpoint is set to 1, and qpoint is set to \\[\\[0, 0, 0\\]\\].\n",
+    " (EL = ELECTRONIC ENERGY\n",
+    "  E0 = ZERO-POINT ENERGY\n",
+    "  ET = THERMAL CONTRIBUTION TO THE VIBRATIONAL ENERGY\n",
+    "  PV = PRESSURE * VOLUME\n",
+    "  TS = TEMPERATURE * ENTROPY)\n",
     "\n",
-    "* **nqpoint\\*nTemperature\\*nPressure**: Gibbs free energy(E_g)  \n",
-    "* **nqpoint\\*nTemperature**: Helmholtz free energy(E_h), vibrational contribution to internal energy(U_vib), constant volume heat capacity(C_v), entropy(S)  \n",
-    "* **nqpoint\\*1**: zero-point energy(E_zp)"
+    "                          AU/CELL             EV/CELL                 KJ/MOL\n",
+    " EL            :   -2057.686915559598  -55992.507576455653    -5402456.23545757\n",
+    " E0            :       0.670005954735      18.231788914567        1759.10038625\n",
+    "\n",
+    "\n",
+    " *******************************************************************************\n",
+    "\n",
+    " THERMODYNAMIC FUNCTIONS WITH VIBRATIONAL CONTRIBUTIONS\n",
+    "\n",
+    " AT (T =  298.15 K, P =   0.10132500E+00 MPA):\n",
+    "\n",
+    "                          AU/CELL             EV/CELL                 KJ/MOL\n",
+    " ET            :       0.040831798552       1.111089725297         107.20387199\n",
+    " PV            :       0.000017530544       0.000477030356           0.04602644\n",
+    " TS            :       0.080307302905       2.185272809177         210.84679406\n",
+    " ET+PV-TS      :      -0.039457973810      -1.073706053524        -103.59689564\n",
+    " EL+E0+ET+PV-TS:   -2057.056367578673  -55975.349493594607    -5400800.73196695\n",
+    "\n",
+    " OTHER THERMODYNAMIC FUNCTIONS:\n",
+    "\n",
+    "                      mHARTREE/(CELL*K)     mEV/(CELL*K)              J/(MOL*K)\n",
+    " ENTROPY       :       0.269352013769       7.329440916241         707.18361249\n",
+    " HEAT CAPACITY :       0.253504784422       6.898215882635         665.57671770\n",
+    "\n",
+    " *******************************************************************************\n",
+    "```"
    ]
   },
   {
@@ -95,12 +136,17 @@
    "id": "28d9a473",
    "metadata": {},
    "source": [
-    "### Thermodynamics at multiple q points and temperatures"
+    "### Multiple q points, Multiple temperatures & pressures\n",
+    "Class Harmonic can calculate the HA thermodynamics at a set of q points in order to sample various cell sizes. As a test case illustrating the effectiveness of this, a phonon dispersion calculation is performed based on the $\\Gamma$ point frequency data of Form I paracetamol crystal. `SCELPHONO` is set to be 1 to save computation time.\n",
+    "\n",
+    "The reference data is 'f1-disp.out' - Frequencies at $\\Gamma$ are different from the 'f1freq-r0.out' case due to unknown reasons. In this case, nqpoint = 140, nmode = 240, natom = 80. The temperature range is set to be 0K ~ 300K, with intervals of 30K while the pressure range is set to be 0 GPa ~ 0.5 GPa, with intervals of 0.1 GPa. Since negative frequencies presents, warning messages will be printed. \n",
+    "\n",
+    "All the calculations are automatically executed. The output file is 'f1-disp-HA.dat'. Phonon dispersions are summed up, which, in the current case, is not necessary since the primitive cell is sufficiently large. This option is useful for smaller primitive cells."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d5e8d24b",
    "metadata": {},
    "outputs": [
@@ -389,6 +435,16 @@
       "WARNING: Negative frequencies detected - Calculated thermodynamics might be inaccurate.\n",
       "WARNING: Negative frequencies will be substituted by NaN.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<crystal_functions.thermodynamics.Harmonic at 0x25925309460>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -396,22 +452,9 @@
     "\n",
     "t = np.arange(0, 301, 30)\n",
     "p = np.arange(0, 0.51, 0.1)\n",
-    "r0_freq = Harmonic().from_file('data/paracetamol_f1_disp.out', temperature=t, pressure=p,\n",
+    "Harmonic().from_file('data/f1-disp.out', temperature=t, pressure=p, \n",
     "                               scelphono=[[1, 0, 0], [0, 1, 0], [0, 0, 1]],\n",
-    "                               write_out=True, filename='data/paracetamol_f1_disp.dat')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5df8d1f3",
-   "metadata": {},
-   "source": [
-    "Initialization and calculation. Results are printed in the file 'data/paracetamol_f1_disp.dat'\n",
-    "\n",
-    "Notes:\n",
-    "1. Negative frequencies (< -0.0001 THz) are replaced by NaN. Warning messages are printed. Rerunning the calculation is suggested in practice.  \n",
-    "2. The first 3 translational modes (0 THz, which has no contribution to thermodynamics) are removed to avoid numerical problems. \n",
-    "3. By setting `write_out=True`, calculations are automatically launched."
+    "                               write_out=True, filename='data/f1-disp-HA.dat')"
    ]
   }
  ],
@@ -431,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
