Add tutorial/data/mgo_ela.out Add (*args) logic in plot_cry_ela

--- a/tutorial/Tutorial_plot.ipynb
+++ b/tutorial/Tutorial_plot.ipynb
@@ -582,11 +582,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Elastic Properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Young Modulus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Compressibility"
+   ]
   }
  ],
  "metadata": {
@@ -605,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
