Modify tutorial and minor bug fix

--- a/examples/thermo-HA.ipynb
+++ b/examples/thermo-HA.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Lattice Dynamics and Density Functional Perturbation Theory - Harmonic Level\n",
     "\n",
-    "The script 'thermodyanmics.py' is a comprehensive module for lattice dynamics based on harmonic and quasi-harmonic level of theory. For simplicity, this tutorial is focused only on harmonic phonons. For quasi-harmonic part, please refer to 'thermodynamics-QHA'."
+    "The script 'thermodyanmics.py' is a comprehensive module for lattice dynamics based on harmonic and quasi-harmonic level of theory. For simplicity, this tutorial is focused only on harmonic phonons. For quasi-harmonic part, please refer to 'thermodynamics-QHA'.\n",
+    "\n",
+    "**Classes used in this tutorial are defined in 'crystal_functions.thermodynamics'. Documentations and source codes are attached at the bottom of this page.**"
    ]
   },
   {
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "18a94ee0",
    "metadata": {},
    "outputs": [
@@ -47,7 +49,7 @@
      "text": [
       "DFT total energy (EL) =  -5402457.523570631 KJ/mol\n",
       "Helmholtz free energy (EL+E0+ET-TS) =  -5400802.066049164  KJ/mol\n",
-      "Gibbs free energy (EL+E0+ET+pV-TS) =  -5400802.066049164  KJ/mol\n",
+      "Gibbs free energy (EL+E0+ET+pV-TS) =  -5400802.020022742  KJ/mol\n",
       "Zero-point energy (E0) =  1759.1003801887075  KJ/mol\n",
       "Vibrational contribution to interla energy - E0 (ET) =  107.2036747375173  KJ/mol\n",
       "Entropy*Temperature (TS) =  210846.5334596592  J/mol\n",
@@ -60,14 +62,12 @@
     "from crystal_functions import thermodynamics\n",
     "from crystal_functions.thermodynamics import Harmonic\n",
     "\n",
-    "rm_condition = Harmonic().from_file('data/freqf1-r0.out', \n",
-    "                                    temperature=[298.15], \n",
-    "                                    pressure=[0.10132500E-3],\n",
-    "                                    scelphono=[[1, 0, 0],\n",
-    "                                               [0, 1, 0],\n",
-    "                                               [0, 0, 1]],\n",
-    "                                    write_out=False)\n",
-    "E_h, E_g, E_zp, U_vib, S, C_v = rm_condition.thermodynamics()\n",
+    "rm_condition = Harmonic(write_out=False).from_file(\n",
+    "    'data/freqf1-r0.out', scelphono=[[1, 0, 0], [0, 1, 0], [0, 0, 1]], auto_calc=False\n",
+    ")\n",
+    "E_h, E_g, E_zp, U_vib, S, C_v = rm_condition.thermodynamics(\n",
+    "    temperature=[298.15], pressure=[0.10132500E-3]\n",
+    ")\n",
     "\n",
     "# Note: All attributes are lists.\n",
     "print('DFT total energy (EL) = ', rm_condition.edft, 'KJ/mol')\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d5e8d24b",
    "metadata": {},
    "outputs": [
@@ -439,10 +439,10 @@
     {
      "data": {
       "text/plain": [
-       "<crystal_functions.thermodynamics.Harmonic at 0x25925309460>"
+       "<crystal_functions.thermodynamics.Harmonic at 0x7f4c65efd490>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,9 +452,11 @@
     "\n",
     "t = np.arange(0, 301, 30)\n",
     "p = np.arange(0, 0.51, 0.1)\n",
-    "Harmonic().from_file('data/f1-disp.out', temperature=t, pressure=p, \n",
-    "                               scelphono=[[1, 0, 0], [0, 1, 0], [0, 0, 1]],\n",
-    "                               write_out=True, filename='data/f1-disp-HA.dat')"
+    "Harmonic(\n",
+    "    temperature=t, pressure=p, write_out=True, filename='data/f1-disp-HA.dat'\n",
+    ").from_file(\n",
+    "    'data/f1-disp.out', scelphono=[[1, 0, 0], [0, 1, 0], [0, 0, 1]]\n",
+    ")"
    ]
   }
  ],
@@ -474,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
