--- a/tutorial/thermo_file_readwrite.ipynb
+++ b/tutorial/thermo_file_readwrite.ipynb
@@ -18,11 +18,12 @@
    "source": [
     "## Tests\n",
     "\n",
-    "3 test are performed. The first one is for $\\Gamma$ point frequencies. The second one is for dispersion calculations. The last one has negative frequencies, in order to examine the method `clean_imaginary`. \n",
+    "4 tests are performed. The first one is for $\\Gamma$ point frequencies. The second one is for dispersion calculations. The third one has negative frequencies, in order to examine the method `clean_imaginary`. The last one is to illustrate the general applicability of this module to QHA outputs.\n",
     "\n",
     "1. Form I paracetamol, 'freqf1-r0.out', $\\Gamma$ point HA frequencies, with occasional warning messages. nqpoint = 1, nmode = 240, natom = 80.  \n",
     "2. A graphene primitive cell, 'nostr-modes.out', phonon dispersion calculated along the $\\Gamma-K-M$ path. nqpoint = 123, nmode = 6, natom = 2.  \n",
-    "3. Form II paracetamol, 'f2p2q-r1.out', $\\Gamma$ point HA frequencies, with imaginary modes. nqpoint = 1, nmode = 480, natom = 160.  "
+    "3. Form II paracetamol, 'f2p2q-r1.out', $\\Gamma$ point HA frequencies, with imaginary modes. nqpoint = 1, nmode = 480, natom = 160.  \n",
+    "4. Corundum, 'corundum.out', available on [crystal tutorial website](https://tutorials.crystalsolutions.eu/tutorials/Tutorial_QHA/AL2O3_SC30_QHA.out). Used to illustrate the structure of data when reading outputs by the QHA module of CRYSTAL. "
    ]
   },
   {
@@ -49,7 +50,7 @@
      "text": [
       "Paracetamol EDFT: -5402457.523570631\n",
       "Paracetamol qpoint: 1 [[0. 0. 0.]]\n",
-      "Paracetamol modes: 1 [240.]\n"
+      "Paracetamol modes: 1 [240]\n"
      ]
     }
    ],
@@ -76,12 +77,10 @@
      "text": [
       "Graphene EDFT: -28768041.661716238\n",
       "Graphene qpoints: 123\n",
-      "Graphene modes: 123 [6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6.\n",
-      " 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6.\n",
-      " 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6.\n",
-      " 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6.\n",
-      " 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6. 6.\n",
-      " 6. 6. 6.]\n"
+      "Graphene modes: 123 [6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
+      " 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
+      " 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6 6\n",
+      " 6 6 6 6 6 6 6 6 6 6 6 6]\n"
      ]
     }
    ],
@@ -122,9 +121,9 @@
      "output_type": "stream",
      "text": [
       "Paracetamol\n",
-      "nqpoint= 1 nmode= 240 natom= 80 first eigenvector= [ 0.02143167  0.         -0.00211671]\n",
+      "nqpoint= 1 nmode= 240 natom= 80 first eigenvector= [ 0.11126206  0.         -0.01098885]\n",
       "Graphene\n",
-      "nqpoint= 123 nmode= 6 natom= 2 first eigenvector= [ 0.         -0.          0.10800503]\n"
+      "nqpoint= 123 nmode= 6 natom= 2 first eigenvector= [ 0.         -0.          0.70710678]\n"
      ]
     }
    ],
@@ -157,8 +156,8 @@
      "text": [
       "Wavevector coordinates: [0.47083333 0.05833333 0.        ]\n",
       "Frequency: 19.8656\n",
-      "Eigenvectors: [[ 5.29177000e-05  1.07952108e-01 -5.29177000e-05]\n",
-      " [-5.29177000e-04  1.06152906e-01  5.29177000e-05]]\n"
+      "Eigenvectors: [[ 3.49519213e-04  7.13019194e-01 -3.49519213e-04]\n",
+      " [-3.49519213e-03  7.01135541e-01  3.49519213e-04]]\n"
      ]
     }
    ],
@@ -251,12 +250,12 @@
       "WARNING: Negative frequencies detected - Calculated thermodynamics might be inaccurate.\n",
       "WARNING: Negative frequencies will be substituted by NaN.\n",
       "[nan nan nan nan nan  0.]\n",
-      "[[       nan        nan        nan]\n",
-      " [       nan        nan        nan]\n",
-      " [       nan        nan        nan]\n",
-      " [       nan        nan        nan]\n",
-      " [       nan        nan        nan]\n",
-      " [-0.0152403 -0.         0.       ]]\n"
+      "[[        nan         nan         nan]\n",
+      " [        nan         nan         nan]\n",
+      " [        nan         nan         nan]\n",
+      " [        nan         nan         nan]\n",
+      " [        nan         nan         nan]\n",
+      " [-0.07905694 -0.          0.        ]]\n"
      ]
     }
    ],
@@ -269,6 +268,46 @@
     "\n",
     "print(neg_freq.frequency[0, :6])\n",
     "print(neg_freq.eigenvector[0, :6, 0, :])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77db324d-5033-4a96-950f-e1119326106f",
+   "metadata": {},
+   "source": [
+    "### Read outputs from QHA module\n",
+    "\n",
+    "The QHA module of CRYSTAL includes automatic generation, optimization and frequency calculations at $\\Gamma$ point. Therefore a different strategy is adopted and keeps the structure of code consistent. Since in all cases, nqpoint = 1, this dimension is removed to avoid an extra 'ncalc' dimension. `Crystal_output().frequency` becomes a 'ncalc\\*nmode' list that corresponds to frequencies at each volume, or HA phonon calculation, instead of at each q point. Other attributes are changed accordingly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "27693bda-617f-479b-872a-db906e7634a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "[[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "[90 90 90 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "qha_freq = Crystal_output()\n",
+    "qha_freq.read_cry_output('data/corundum.out')\n",
+    "qha_freq.get_mode()\n",
+    "qha_freq.get_eigenvector()\n",
+    "\n",
+    "print(qha_freq.nqpoint)\n",
+    "print(qha_freq.qpoint)\n",
+    "print(qha_freq.nmode)"
    ]
   },
   {
@@ -610,7 +649,13 @@
     "\n",
     "            self.eigenvector.append(q_rearrange)\n",
     "\n",
-    "        self.eigenvector = np.array(self.eigenvector) * 0.529177\n",
+    "        self.eigenvector = np.array(self.eigenvector)\n",
+    "        \n",
+    "        # Normalize eigenvectors of each mode to 1\n",
+    "        for idx_q, q in enumerate(self.eigenvector):\n",
+    "            for idx_m, m in enumerate(q):\n",
+    "                self.eigenvector[idx_q, idx_m] = \\\n",
+    "                    self.eigenvector[idx_q, idx_m] / np.linalg.norm(m)\n",
     "\n",
     "        return self.eigenvector"
    ]
@@ -686,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
