Commit before merge last 2 PR

--- a/tutorial/Tutorial.ipynb
+++ b/tutorial/Tutorial.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "id": "bcec80e2",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 117,
    "id": "235c6db0",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 118,
    "id": "1a658578",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 119,
    "id": "c76bce0b",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<file_readwrite.Crystal_input object at 0x104459a30>\n"
+      "<file_readwrite.Crystal_input object at 0x17f6368b0>\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 120,
    "id": "015c6fb2",
    "metadata": {},
    "outputs": [],
@@ -166,17 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 121,
    "id": "126fc494",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<file_readwrite.Crystal_input at 0x104459a30>"
+       "<file_readwrite.Crystal_input at 0x17f6368b0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 122,
    "id": "7e99dc00",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
        " '8 0.5   0.5   0.5\\n']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 123,
    "id": "b685ab4d",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 124,
    "id": "09508cad",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 125,
    "id": "6efefe66",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 126,
    "id": "036f5dff",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 127,
    "id": "ac71e0d6",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        " 'END\\n']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 128,
    "id": "be38f49f",
    "metadata": {},
    "outputs": [],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 129,
    "id": "c99fc918",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 130,
    "id": "757dcb44",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 131,
    "id": "95327a14",
    "metadata": {},
    "outputs": [
@@ -642,12 +642,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f4a9f8b9",
+   "execution_count": 133,
+   "id": "a13cf5d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from crystal_functions.file_readwrite import Crystal_output"
+    "from crystal_functions.file_readwrite import Crystal_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "8937cac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from crystal_functions.file_readwrite import Crystal_output"
    ]
   },
   {
@@ -662,17 +672,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c6b35ab7",
+   "execution_count": 183,
+   "id": "6e979d81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<file_readwrite.Crystal_output at 0x1214c0af0>"
+       "<crystal_functions.file_readwrite.Crystal_output at 0x17e6af550>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,6 +693,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "c6b35ab7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<crystal_functions.file_readwrite.Crystal_output at 0x17f6460a0>"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_output = Crystal_output()\n",
+    "mgo_output.read_cry_output('data/mgo_optgeom.out')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "0aae4aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[0.0, 2.12011000819, 2.12011000819],\n",
+       "  [2.12011000819, 0.0, 2.12011000819],\n",
+       "  [2.12011000819, 2.12011000819, 0.0]],\n",
+       " [12, 8],\n",
+       " [[0.0, 0.0, 0.0], [-2.12011000819, -2.12011000819, -2.12011000819]]]"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_output.get_last_geom()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "810e96f1",
    "metadata": {},
@@ -690,27 +747,6 @@
     "Now that the mgo_output was created and the CRYSTAL output file was read, the functions belonging to the Crystal_object class can be used to extract information from the object itself.\n",
     "\n",
     "For example, let's see what the final energy of the system is. For this we will use the function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "d1e9ab4d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-7495.341792877063"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mgo_output.get_final_energy()"
    ]
   },
   {
@@ -725,7 +761,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 137,
+   "id": "13820e07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10.129, 9.871]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_output.get_mulliken_charges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
    "id": "c46181c4",
    "metadata": {},
    "outputs": [
@@ -747,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 139,
    "id": "83a6a3a2",
    "metadata": {},
    "outputs": [],
@@ -769,17 +826,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 140,
    "id": "33f2e8a3",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -790,7 +840,7 @@
        " [[0.0, 0.0, 0.0], [-2.12011000819, -2.12011000819, -2.12011000819]]]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +866,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 141,
+   "id": "c96b6770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lattice_vectors, atomic_numbers, cart_coords = mgo_output.get_last_geom()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "id": "13703b63",
    "metadata": {},
    "outputs": [
@@ -868,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 143,
    "id": "8d13bd09",
    "metadata": {},
    "outputs": [],
@@ -878,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 144,
    "id": "4983a6ff",
    "metadata": {},
    "outputs": [],
@@ -889,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 145,
    "id": "43755672",
    "metadata": {},
    "outputs": [],
@@ -919,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 146,
    "id": "0555c669",
    "metadata": {},
    "outputs": [],
@@ -945,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 147,
    "id": "0e10a111",
    "metadata": {},
    "outputs": [],
@@ -963,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 148,
    "id": "5ae95a6d",
    "metadata": {},
    "outputs": [],
@@ -981,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 149,
    "id": "9511fa59",
    "metadata": {},
    "outputs": [],
@@ -1001,17 +1061,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 150,
    "id": "c81da925",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<file_readwrite.Properties_input at 0x1265d6790>"
+       "<file_readwrite.Properties_input at 0x17ec3c040>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 151,
    "id": "aeb551e7",
    "metadata": {},
    "outputs": [],
@@ -1060,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 152,
    "id": "30ba7fd0",
    "metadata": {},
    "outputs": [],
@@ -1070,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 153,
    "id": "753815d0",
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 154,
    "id": "86d8f036",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 155,
    "id": "b54ddb10",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 156,
    "id": "87093d0b",
    "metadata": {},
    "outputs": [],
@@ -1179,17 +1239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 157,
    "id": "6d8b133b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<file_readwrite.Properties_output at 0x1303fbd30>"
+       "<file_readwrite.Properties_output at 0x17f240070>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,17 +1261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 158,
    "id": "5b293357",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<file_readwrite.Properties_output at 0x130404220>"
+       "<file_readwrite.Properties_output at 0x17f240a60>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 159,
    "id": "70fd84c7",
    "metadata": {},
    "outputs": [],
@@ -1259,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 160,
    "id": "40be986e",
    "metadata": {},
    "outputs": [],
@@ -1295,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 161,
    "id": "439a2812",
    "metadata": {},
    "outputs": [],
@@ -1321,17 +1381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 162,
    "id": "beedc92d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<file_readwrite.Crystal_gui at 0x1303d78e0>"
+       "<file_readwrite.Crystal_gui at 0x17ec67340>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1339,6 +1399,27 @@
    "source": [
     "mgo_gui = Crystal_gui()\n",
     "mgo_gui.read_cry_gui('data/mgo_optgeom.gui')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "1899a93d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pymatgen.core.structure.Structure"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_pmg = cry_gui2pmg(mgo_gui)\n"
    ]
   },
   {
@@ -1351,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 164,
    "id": "b41d2727",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1451,7 @@
        "PeriodicSite: O (-2.1201, -2.1201, -2.1201) [-0.5000, -0.5000, -0.5000]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,6 +1459,26 @@
    "source": [
     "mgo_pmg = cry_gui2pmg(mgo_gui)\n",
     "mgo_pmg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "9e1bb2b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mgo_gui2 = cry_pmg2gui(mgo_pmg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "6c8f6fb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_crystal_gui('path_to_file',mgo_gui2)"
    ]
   },
   {
@@ -1406,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 167,
    "id": "7fe64051",
    "metadata": {},
    "outputs": [
@@ -1425,7 +1526,7 @@
        "PeriodicSite: O (-2.1201, -2.1201, -2.1201) [-0.5000, -0.5000, -0.5000]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1455,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 168,
    "id": "3cfd518e",
    "metadata": {},
    "outputs": [],
@@ -1477,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 169,
    "id": "ada5fc64",
    "metadata": {},
    "outputs": [],
@@ -1496,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 170,
    "id": "e6e9f66b",
    "metadata": {},
    "outputs": [
@@ -1738,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 171,
    "id": "fb3b1d1c",
    "metadata": {},
    "outputs": [
@@ -1748,7 +1849,7 @@
        "Atoms(symbols='MgO', pbc=True, cell=[[0.0, 2.12011000819, 2.12011000819], [2.12011000819, 0.0, 2.12011000819], [2.12011000819, 2.12011000819, 0.0]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 172,
    "id": "49f43b87",
    "metadata": {},
    "outputs": [],
@@ -1797,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 173,
    "id": "e8e8a1be",
    "metadata": {},
    "outputs": [],
@@ -1808,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 174,
    "id": "21471a32",
    "metadata": {},
    "outputs": [],
@@ -1834,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 175,
    "id": "161aef47",
    "metadata": {},
    "outputs": [
@@ -1844,7 +1945,7 @@
        "Atoms(symbols='MgO', pbc=True, cell=[[0.0, 2.12011000819, 2.12011000819], [2.12011000819, 0.0, 2.12011000819], [2.12011000819, 2.12011000819, 0.0]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1874,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 176,
    "id": "4717aa5b",
    "metadata": {},
    "outputs": [],
@@ -1892,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 177,
    "id": "8d70a5ef",
    "metadata": {},
    "outputs": [],
@@ -1913,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 178,
    "id": "b2d6ac3c",
    "metadata": {},
    "outputs": [
